intial Project setup for web

--- a/BiStudio-web/pom.xml
+++ b/BiStudio-web/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.bs</groupId>
     <artifactId>bi-studio-web</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
 
     <name>BiStudio-web</name>
 
