--- a/BiStudio-web/pom.xml
+++ b/BiStudio-web/pom.xml
@@ -13,7 +13,7 @@
     <packaging>pom</packaging>
 
     <name>BiStudio-web</name>
-
-   
-
+    <modules>
+        <module>BiStudioStaticWeb</module>
+    </modules>
 </project>
