--- a/BiStudio-web/pom.xml
+++ b/BiStudio-web/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>bi-studio</artifactId>
-    <groupId>com.bs</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>bi-studio</artifactId>
+        <groupId>com.bs</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.bs</groupId>
     <artifactId>bi-studio-web</artifactId>
@@ -15,5 +15,6 @@
     <name>BiStudio-web</name>
     <modules>
         <module>BiStudioStaticWeb</module>
+        <module>BiStudio-War</module>
     </modules>
 </project>
